# otus-cpp-02_10-07-2021_allocator

./: CMakeLists.txt  README.md  allocator.h  custom_allocator.h  custom_container.h  defs.h  factorial.cpp  main.cpp
.github/workflows/: release.yml
